# Promo-Pipeline

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  LEARNING.md  NOTES.md  PLANNING.md  README.md  ROADMAP-2026-06.md  architecture.md  pyproject.toml  requirements.txt  research_beat_diff.py  research_dramatic_probe.py  research_global_tune.py  research_leverB_probe.py  research_packer_spike.py  research_verify_production.py
ci/: handoff_check.sh
docs/: BACKLOG.md  LEARNING.md  ROADMAP.md  vision_directory_and_dataflow.md  vps-readiness.md
docs/contracts/: asset_platform_CONTRACT_v1.1.md
docs/operations/: pgc_daily_runbook.md  pgc_production_contract.md
docs/research/: copywriting_skills_memo_20260612.md  render-speedup-2026-06.md  retrieval_order_memo_20260612.md
docs/schemas/: clip_assignments.md  embedding_cache.md  music_library.md  run_manifest.md  shared_poi_asset_library.md  tts_metrics.md
material/: README.md
promo/arsenal/: README.md  ai_tell_watchlist.md  script_hooks.yaml
promo/cli/: architecture.md  audit_run_manifest.py  build_embedding_index.py  compile_promo.py  export_release_handoff.py  generate_narration.py  list_voices.py  prepare_drive_staging.py  probe_music_library_durations.py  register_release_candidates.py  render_architecture.py  retrieval_dry_run.py  revert_usage.py  run_batch.py  select_batch_pois.py  smoke_local_render.py  upload_drive_staging.py  usage_events_preview.py  usage_events_writeback.py  wavespeed_upscale_once.py
promo/core/: __init__.py  architecture.md  arsenal_loader.py  atomic_io.py  (+17 more)
scripts/: install_repo_skills.sh
workflow/: CROSS-REPO.md  ROADMAP.md  daily-log.md  near-dup-phase1-REVIEW.md  near-dup-phase1-report.md  near_dup_simulate.py  p1g-23505-shape.md  proposal_in_progress_poi_lock.md
(+195 files in other folders)
